<resources>
    <string name="app_name">Phi App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="loadingText">در حال بارگیری</string>
    <string name="therapySchedule">برنامه درمانی</string>
    <string name="educate">آموزش</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show">مشاهده</string>
    <string name="submitEvaluation">ثبت عملکرد</string>
    <string name="showExercise">مشاهده تمرین</string>
    <string name="video">فیلم</string>
    <string name="doExercises">انجام تمرین</string>
    <string name="submitExerciseEvaluation">:(میزان تمرین انجام شده را ثبت کنید)</string>
    <string name="submitFeedback">ثبت بازخورد:</string>
    <string name="feedback_hint">اگر در ارتباط با تمرین مشکل داشتید، بنویسید...</string>
    <string name="exerciseDifficulty">سختی تمرین:</string>
    <string name="pain">درد</string>
    <string name="painLabelHint">: (0: بدون درد ، 10: شدیدترین در ممکن)</string>
    <string name="fatigue">خستگی</string>
    <string name="submit">ثبت</string>
    <string name="evaluation">ارزیابی</string>
    <string name="evaluationQuestionnareHelper">با کلیک بر روی هر کدام از عناوین زیر، به دقت به پرسش پاسخ دهید:</string>
</resources>